detection of error